--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <div id="head">
             <div class="row">
                 <div class="logo" style="border-top: 5px solid #dc2158;">
-                    <img src="http://peggy.simular.in/TEST/images/data/LOGO.png" alt="" style="width: 100%;margin: 0 auto;max-width: 200px;height: auto;">
+                    <img src="http://peggy.simular.in/TEST/images/data/LOGO.png" alt="" style="width: 100%;margin: 0 auto 5px auto;max-width: 200px;height: auto;">
                 </div>
                 <img src="http://peggy.simular.in/TEST/images/data/head.png" style="width: 100%;margin: 0;padding: 0;">
                 <h4 style="text-align: right;padding: 10px 10px;margin: 0px;font-size: 14px;font-weight: 400;color: #888;">isuue date | 2017.05.17</h4>
@@ -13,8 +13,8 @@
         <div id="list">
             <div class="row">
                 <h5 style="text-align: center;font-weight: 500;margin: 20px 0 0px;font-size: 18px;font-weight: bold;">實體店的科技逆襲</h5>
-                <p style="padding: 0 15px 20px 15px;">關於零售業，壞消息已經聽得不能再多了。百貨商場、連鎖品牌關的關，裁的裁，而且似乎沒有停止的跡象。但根據調查，大多數消費者對實體購物還是情有獨鍾。因此，阿里巴巴、小米、亞馬遜紛紛從線上跨入線下，試圖在新零售時代中，運用科技創造全新的體驗，重塑實體店不可取代的價值。</p>
-                <div class="news" style="display: block; max-width: 700px;margin: 0 auto;padding: 30px;margin-bottom: 30px;background: #dc2158;border-bottom: 5px solid black;">
+                <p style="padding: 0 15px 20px 15px;border-bottom: 1px solid;">關於零售業，壞消息已經聽得不能再多了。百貨商場、連鎖品牌關的關，裁的裁，而且似乎沒有停止的跡象。但根據調查，大多數消費者對實體購物還是情有獨鍾。因此，阿里巴巴、小米、亞馬遜紛紛從線上跨入線下，試圖在新零售時代中，運用科技創造全新的體驗，重塑實體店不可取代的價值。</p>
+                <div class="news" style="display: block; max-width: 700px;margin: 30px auto 30px auto;padding: 30px;background: #dc2158;border-bottom: 5px solid black;">
                     <div class="line" style="border: solid 1px #f35684;">
                         <h3 style="text-align: center;font-size: 24px;margin: 15px 0 0 0;color: #fff;font-weight: 400;">本期精選 </h3>
                         <ul style="list-style: none;padding: 0 15px 15px 20px;margin: 0;">
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div id="content" style="display: block;box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.15);max-width: 700px;margin: 0 auto;padding: 30px;">
+        <div id="content" style="display: block;box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.15);max-width: 700px;margin: 0 auto;padding: 30px;border: 1px solid #eee;">
             <div class="row">
                 <h3 style="text-align: center;font-size: 24px;margin: 0;color: black;font-weight: 400;">—— 更多深度內容 ——</h3>
                 <div class="content1" style="display: inline-block;">
@@ -73,9 +73,9 @@
             </div>
         </div>
         <div id="footer" style="background: black;padding: 13px 0;margin-top: 30px;">
-            <p style="text-align: center;color: #fff;font-size: 14px;">讀者服務信箱<a href="fintechbase@iii.org.tw" style="color: #fff; text-decoration: none;">
+            <p style="text-align: center;color: #fff;font-size: 14px;margin: 14 0 0 0">讀者服務信箱<a href="fintechbase@iii.org.tw" style="color: #fff; text-decoration: none;">
             fintechbase@iii.org.tw</a></p>
-            <p style="text-align: center;color: #fff;font-size: 14px;line-height: 1.5em;">Copyright © 2017 金融科技創新創業及人才培育計畫. 版權所有。</p>
+            <p style="text-align: center;color: #fff;font-size: 14px;line-height: 1.5em;padding: 0 15px;margin: 0 0 14px 0;">Copyright © 2017 金融科技創新創業及人才培育計畫. 版權所有。</p>
         </div>
     </div>
 </body>
